--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,22 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'checkstyle'
 
-sourceCompatibility = 1.6
+sourceCompatibility = 1.7
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile 'junit:junit:4.11'
+    testCompile 'org.mockito:mockito-all:1.9.5'
+    testCompile 'com.squareup.okhttp:mockwebserver:2.5.0'
+    testCompile 'commons-io:commons-io:2.4'
+
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
 }
 
 task checkstyle(type: Checkstyle) {
