--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,11 @@ repositories {
 }
 
 dependencies {
-  compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+  compile 'com.squareup.okhttp:okhttp:2.5.0'
+  compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+  compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
   compile 'com.google.code.gson:gson:2.5'
+  compile 'com.squareup.okio:okio:1.0.0'
   testCompile 'junit:junit:4.11'
   testCompile 'org.mockito:mockito-all:1.9.5'
   testCompile 'com.squareup.okhttp:mockwebserver:2.5.0'
