--- a/build.gradle
+++ b/build.gradle
@@ -10,16 +10,24 @@ repositories {
   mavenCentral()
 }
 
+sourceSets {
+  test {
+    resources {
+      srcDir 'src/test/resources'
+    }
+  }
+}
+
 dependencies {
-  compile 'com.squareup.okhttp:okhttp:2.5.0'
-  compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-  compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
-  compile 'com.google.code.gson:gson:2.5'
-  compile 'com.squareup.okio:okio:1.0.0'
-  testCompile 'junit:junit:4.11'
-  testCompile 'org.mockito:mockito-all:1.9.5'
-  testCompile 'com.squareup.okhttp:mockwebserver:2.5.0'
-  testCompile 'commons-io:commons-io:2.4'
+  compile 'com.squareup.okhttp3:okhttp:3.12.1'
+  compile 'com.squareup.retrofit2:retrofit:2.5.0'
+  compile 'com.squareup.retrofit2:converter-gson:2.5.0'
+  compile 'com.google.code.gson:gson:2.8.5'
+  compile 'com.squareup.okio:okio:2.2.1'
+  testCompile 'junit:junit:4.12'
+  testCompile 'org.mockito:mockito-all:1.10.19'
+  testCompile 'com.squareup.okhttp3:mockwebserver:3.12.1'
+  testCompile 'commons-io:commons-io:2.6'
 }
 
 task copyTestResources(type: Copy) {
